# tsf

./: .coverage  .gitignore  Dockerfile  FEATURES.txt  README.md  RUNBOOK.md  alembic.ini  docker-compose.yml  inventory.json  pyproject.toml  pytest.ini  requirements.txt
conf/: config.yaml  config.yaml.bak.1761918411
conf/data/: default.yaml
conf/database/: postgresql.yaml
conf/evaluation/: cv.yaml
conf/model/: nhits.yaml
conf/tracking/: mlflow.yaml
conf/training/: default.yaml
db/: models.py
db/migrations/: env.py  env.py.bak.1761910729
monitoring/prometheus/: prometheus.yml
reports/: README.md  junit_20251031_225913.xml  junit_20251031_232450.xml  pytest_20251031_225913.html  pytest_20251031_225913.json  pytest_20251031_232450.html  pytest_20251031_232450.json
samples/: data.csv  metrics_summary.sample.json
schemas/: forecast_request.schema.json  forecast_response.schema.json  log_record.schema.json  manifest.schema.json  metrics_summary.schema.json  resolved_config.schema.json  signature.schema.json
scripts/: pytest_full.sh  pytest_quick.sh  run_tests.sh
src/core/: parent_resolver.py  run.py  run.py.bak.1761918180
src/runner/: cli.py
src/utils/: logger.py  retries.py
tests/: conftest.py
tests/contract/: test_metrics_schema.py
tests/regression/: test_fingerprint.py
tests/smoke/: test_cli_backtest_dry_run.py  test_cli_dry_run.py  test_cli_forecast_dry_run.py
tests/unit/: test_asyncio_basic.py  test_cli_help.py  test_env_monkeypatch.py  test_fingerprint_default.py  test_fingerprint_properties.py  test_parent_resolver.py  (+1 more)
(+2 files in other folders)
